force-app/main/default/objects/IMGA_Risk_Assessment__c/IMGA_Risk_Assessment__c.object-meta.xml
<CustomObject>
    <description>Child to Account object.</description>
    <label>IMGA Risk Assessment</label>
    <nameField>
        <displayFormat>IMGA RA- {0000000}</displayFormat>
        <label>IMGA Risk Issue #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMGA Risk Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>