force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/At_Risk_Assessor__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The IM employee who accepted or identified this account as at risk.</description>
    <inlineHelpText>The IM employee who accepted or identified this account as at risk.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IMGA_Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>