force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/At_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Category__c</fullName>
    <description>The risk assessment category across all business lines.</description>
    <formula>IMGA_Account__r.At_Risk_Category__c</formula>
    <inlineHelpText>The risk assessment category across all business lines.</inlineHelpText>
    <label>At Risk Category</label>
    <type>Text</type>
</CustomField>