force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/At_Risk_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Override_Date__c</fullName>
    <description>This is the date the Risk Assessor overrides a red risk assessment within the Customer_Action_Plan visual flow.</description>
    <inlineHelpText>This is the date the Risk Assessor overrides a red risk assessment.</inlineHelpText>
    <label>At Risk Override Date</label>
    <type>Date</type>
</CustomField>