force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/At_Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Status__c</fullName>
    <description>When a sales rep is notified that an account is at-risk, he/she must research the risk. Otherwise, after 30 days the field will be marked as No Action Taken.</description>
    <inlineHelpText>When a sales rep is notified that an account is at-risk, he/she must research the risk. Otherwise, after 30 days the field will be marked as No Action Taken.</inlineHelpText>
    <label>At Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept Risk</fullName>
                <color>#419249</color>
                <label>Accept Risk</label>
            </value>
            <value>
                <fullName>Accept Risk - Manual Flag</fullName>
                <color>#33FF33</color>
                <label>Accept Risk - Manual Flag</label>
            </value>
            <value>
                <fullName>Reject Risk</fullName>
                <color>#F3D904</color>
                <label>Reject Risk</label>
            </value>
            <value>
                <fullName>No Action Taken</fullName>
                <color>#FF0000</color>
                <label>No Action Taken</label>
            </value>
            <value>
                <fullName>IMGA RA Not Started</fullName>
                <color>#3366FF</color>
                <default>true</default>
                <label>IMGA RA Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>