force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Business_Function1__c.field-meta.xml
<CustomField>
    <fullName>Business_Function1__c</fullName>
    <label>Business Function</label>
    <length>25</length>
    <type>Text</type>
</CustomField>