force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <formula>if( isblank(Flow_State__c),&apos;N/A&apos;,Flow_State__r.Business_Function__c )</formula>
    <label>Do Not Use</label>
    <type>Text</type>
</CustomField>