force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/CAP_Status__c.field-meta.xml
<CustomField>
    <fullName>CAP_Status__c</fullName>
    <formula>IF(Flow_State__r.Active__c,
Flow_State__r.Status__c, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAP Status</label>
    <type>Text</type>
</CustomField>