force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Chatter_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Notification_Date__c</fullName>
    <formula>IMGA_Account__r.Last_Risk_Processing_Batch_Date__c</formula>
    <label>Chatter Notification Date</label>
    <type>Date</type>
</CustomField>