force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Complete_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Complete_Assessment__c</fullName>
    <formula>IF( 
NOT(ISPICKVAL( At_Risk_Status__c , &quot;Complete&quot;)), 

IF( $User.Id = At_Risk_Assessor__r.Id , 

HYPERLINK( 
&quot;apex/RiskAssessmentNewIMGA?id=&quot; &amp; Id, 
IMAGE( 
&quot;/resource/1417050420000/Update_Button&quot;, 
&quot;Complete&quot; 
), &quot;_self&quot; 
) 
,&quot;You are not the At Risk Assessor&quot; 
), 

HYPERLINK( 
&quot;apex/RiskAssessmentNewIMGA?id=&quot; &amp; Id,
 IMAGE(&quot;/resource/1417050420000/Update_Button&quot;,&quot;Complete&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Assessment</label>
    <type>Text</type>
</CustomField>