force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Count_of_Red_Cids__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Red_Cids__c</fullName>
    <description>Count of customer accounts which are currently &quot;red.&quot;</description>
    <formula>IMGA_Account__r.Count_of_Red_Cids__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of customer accounts which are currently &quot;red.&quot;</inlineHelpText>
    <label>Count of Red CIDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>