force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Current_Year_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Total_Revenue__c</fullName>
    <description>Invoiced revenue from all customer accounts for the current calendar year.</description>
    <formula>IMGA_Account__r.Current_Year_Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoiced revenue from all customer accounts for the current calendar year.</inlineHelpText>
    <label>Current Year Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>