force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Customer_Action_Plan_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Action_Plan_Flag__c</fullName>
    <formula>AND($User.IMGA_CAP_User__c,
    OR(At_Risk_Assessor__r.Id = $User.Id,
       $User.IMGA_CAP_Assessor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Action Plan Flag</label>
    <type>Checkbox</type>
</CustomField>