force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Date_48_Hour_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_48_Hour_Reminder_Sent__c</fullName>
    <inlineHelpText>This is the date that the reminder notification was sent out. The reminder notification will be sent out if the at risk assessor doesn&apos;t accept or reject risk within 48 hours.</inlineHelpText>
    <label>Date 48 Hour Reminder Sent</label>
    <type>Date</type>
</CustomField>