force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/DBR_At_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>DBR_At_Risk_Flag__c</fullName>
    <description>The risk assessment flag for the Database Backup &amp; Recovery business line.</description>
    <formula>IMGA_Account__r.DBR_At_Risk_Flag__c</formula>
    <inlineHelpText>The risk assessment flag for the Database Backup &amp; Recovery business line.</inlineHelpText>
    <label>DBR At Risk Flag</label>
    <type>Text</type>
</CustomField>