force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/DBR_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>DBR_At_Risk_Score__c</fullName>
    <description>The risk assessment score for the Data Backup &amp; Recovery business line.</description>
    <formula>IMGA_Account__r.DBR_At_Risk_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The risk assessment score for the Data Backup &amp; Recovery business line.</inlineHelpText>
    <label>DBR At Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>