force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/DBR_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>DBR_Monthly_Value__c</fullName>
    <description>The monthly value of the Data Backup &amp; Recovery business line.</description>
    <formula>IMGA_Account__r.DBR_Monthly_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The monthly value of the Data Backup &amp; Recovery business line.</inlineHelpText>
    <label>DBR Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>