force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/DBR_Reason_Code_2__c.field-meta.xml
<CustomField>
    <fullName>DBR_Reason_Code_2__c</fullName>
    <description>#2 reason attributed to why account is at risk, ranked in order of importance.</description>
    <formula>IMGA_Account__r.DBR_Reason_Code_2__c</formula>
    <inlineHelpText>#2 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>DBR Reason Code 2</label>
    <type>Text</type>
</CustomField>