force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/DBR_Service__c.field-meta.xml
<CustomField>
    <fullName>DBR_Service__c</fullName>
    <formula>IMGA_Account__r.DBR_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This represents the percentage of risk attributed to this category code for this product line.</inlineHelpText>
    <label>DBR Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>