force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Flow_State_Progress_Flag__c.field-meta.xml
<CustomField>
    <fullName>Flow_State_Progress_Flag__c</fullName>
    <formula>if(
    or(
        Flow_State_Status__c = &apos;In Progress&apos;,
        Flow_State_Status__c = &apos;Complete&apos;
    ),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow State Progress Flag</label>
    <type>Checkbox</type>
</CustomField>