force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/IMGA_Account__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Account__c</fullName>
    <description>The Iron Mountain Group Account which owns this risk assessment.</description>
    <inlineHelpText>The Iron Mountain Group Account which owns this risk assessment.</inlineHelpText>
    <label>IMGA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IMGA Risk Assessment History</relationshipLabel>
    <relationshipName>IMGA_Risk_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>