force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Prior_Year_RM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_RM_Revenue__c</fullName>
    <description>Invoiced revenue for Records Management for the prior calendar year.</description>
    <formula>IMGA_Account__r.Prior_Year_RM_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoiced revenue for Records Management for the prior calendar year.</inlineHelpText>
    <label>Prior Year RM Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>