force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Research_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Research_Assessment__c</fullName>
    <formula>IF( 
NOT(ISPICKVAL( At_Risk_Status__c , &quot;Complete&quot;)), 

HYPERLINK( 
Id, 
IMAGE( 
&quot;/resource/1414431482000/Research&quot;, 
&quot;Complete&quot; 
), &quot;_self&quot; 
) 
,&quot;Assessment Complete&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Assessment</label>
    <type>Text</type>
</CustomField>