force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Risk_Flag_Override__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag_Override__c</fullName>
    <formula>IMAGE( 
CASE( 

Risk_Level_Override__c, 

&quot;Red&quot;, &quot;/img/msg_icons/error16.png&quot;, 
&quot;Yellow&quot;, &quot;/img/msg_icons/warning16.png&quot;, 
&quot;Green&quot;, &quot;/img/msg_icons/confirm16.png&quot;, 

&quot;/s.gif&quot;), 
&quot;NULL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Flag Override</label>
    <type>Text</type>
</CustomField>