force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/RM_At_Risk_Catgory__c.field-meta.xml
<CustomField>
    <fullName>RM_At_Risk_Catgory__c</fullName>
    <description>The risk assessment category for the Records Management business line.</description>
    <formula>IMGA_Account__r.DBR_At_Risk_Category__c</formula>
    <inlineHelpText>The risk assessment category for the Records Management business line.</inlineHelpText>
    <label>RM At Risk Category</label>
    <type>Text</type>
</CustomField>