force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/RM_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>RM_At_Risk_Score__c</fullName>
    <description>The risk assessment score for the Records Management business line.</description>
    <formula>IMGA_Account__r.RM_At_Risk_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The risk assessment score for the Records Management business line.</inlineHelpText>
    <label>RM At Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>