force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/RM_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>RM_Monthly_Value__c</fullName>
    <description>The monthly value of the Records Management business line.</description>
    <formula>IMGA_Account__r.RM_Monthly_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The monthly value of the Records Management business line.</inlineHelpText>
    <label>RM Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>