force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/RM_Reason_Code_3__c.field-meta.xml
<CustomField>
    <fullName>RM_Reason_Code_3__c</fullName>
    <description>#3 reason attributed to why account is at risk, ranked in order of importance.</description>
    <formula>IMGA_Account__r.RM_Reason_Code_3__c</formula>
    <inlineHelpText>#3 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>RM Reason Code 3</label>
    <type>Text</type>
</CustomField>