force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/RM_Relationship__c.field-meta.xml
<CustomField>
    <fullName>RM_Relationship__c</fullName>
    <formula>IMGA_Account__r.RM_Relationship__c</formula>
    <inlineHelpText>This represents the percentage of risk attributed to this category code for this product line.</inlineHelpText>
    <label>RM Relationship</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>