force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/RM_Segment__c.field-meta.xml
<CustomField>
    <fullName>RM_Segment__c</fullName>
    <formula>IMGA_Account__r.RM_Segment__c</formula>
    <inlineHelpText>High, Medium, or Low Risk 
Priority 3, Priority 2, or Priority 1 Ranking 
The combination provides another level of detail into the risk severity.</inlineHelpText>
    <label>RM Segment</label>
    <type>Text</type>
</CustomField>