force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Shred_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Shred_At_Risk_Score__c</fullName>
    <description>The risk assessment score for the Secure Shredding business line.</description>
    <formula>IMGA_Account__r.Shred_At_Risk_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The risk assessment score for the Secure Shredding business line.</inlineHelpText>
    <label>Shred At Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>