force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Shred_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Shred_Monthly_Value__c</fullName>
    <description>The monthly value of the Secure Shredding business line.</description>
    <formula>IMGA_Account__r.Shred_Monthly_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The monthly value of the Secure Shredding business line.</inlineHelpText>
    <label>Shred Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>