force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Shred_Reason_Code_4__c.field-meta.xml
<CustomField>
    <fullName>Shred_Reason_Code_4__c</fullName>
    <description>#4 reason attributed to why account is at risk, ranked in order of importance.</description>
    <formula>IMGA_Account__r.Shred_Reason_Code_4__c</formula>
    <inlineHelpText>#4 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>Shred Reason Code 4</label>
    <type>Text</type>
</CustomField>