force-app/main/default/objects/IMGA_Risk_Assessment__c/fields/Shred_Reason_Code_5__c.field-meta.xml
<CustomField>
    <fullName>Shred_Reason_Code_5__c</fullName>
    <description>#5 reason attributed to why account is at risk, ranked in order of importance.</description>
    <formula>IMGA_Account__r.Shred_Reason_Code_5__c</formula>
    <inlineHelpText>#5 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>Shred Reason Code 5</label>
    <type>Text</type>
</CustomField>